<resources>
    <string name="app_name">SpotBuy</string>

    <string name="user_name">User Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="logout">Logout</string>
    <string name="your_ads">Your Ads</string>
    <string name="share_app">Share App</string>
    <string name="messages">Messages</string>
    <string name="sell">Sell</string>
    <string name="my_ads">My Posts</string>
    <string name="topup">Topup</string>
    <string name="buy_more_post_s">Buy more post\'s</string>
    <string name="add_a_new_post">Add a new post</string>
    <string name="make_new_post">Make new post</string>
    <string name="upload_image">Upload Vehicle Image(s)</string>
    <string name="category">Category</string>
    <string name="vehicle_image">Vehicle Images</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="vehicle_overview">Vehicle Overview</string>
    <string name="description">Description</string>
    <string name="related_ads">Related Ads</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="eng_hindi">Hindi</string>
    <string name="eng_bengali">Bengali</string>
    <string name="bengali">বাংলা</string>
    <string name="eng_tamil">Tamil</string>
    <string name="tamil">தமிழ்</string>
    <string name="languages">Languages</string>
    <string name="post">Post</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="message">Message</string>
    <string name="call">Call</string>
    <string name="follow">Follow</string>
    <string name="user_profile">My Profile</string>
    <string name="verify">Verify</string>
    <string name="profile">Profile</string>
    <string name="update_post">Update Post</string>
    <string name="update">Update</string>
    <string name="chats">Chats</string>
    <string name="select_gender">Select Gender</string>
    <string name="rupee">₹</string>
    <string name="price">Price</string>
    <string name="add_image">Add Image</string>
    <string name="delete_image">delete image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_vehicles">Search Vehicles</string>
    <string name="back_button">back button</string>
    <string name="no_result_found">No Result Found</string>
    <string name="seller_profile">Seller Profile</string>
    <string name="type_message">Type message ...</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="about_us">About Us</string>
    <string name="ad_attribution">ad</string>


<!--    AdMobe Test Strings-->
    <string name="admobe_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_1">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_2">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_1">ca-app-pub-3940256099942544/1033173712</string>
    <string name="native_1">ca-app-pub-3940256099942544/2247696110</string>
    <string name="native_2">ca-app-pub-3940256099942544/2247696110</string>
    <string name="rewarded_1">ca-app-pub-3940256099942544/1033173712</string>
    <string name="rewarded_2">ca-app-pub-3940256099942544/1033173712</string>
    <string name="select_your_city">Select Your City</string>
    <string name="select_your_state">Select Your State</string>
    <string name="save">Save</string>


    <!--    &lt;!&ndash;    AdMobe Ranjana Account Strings&ndash;&gt;-->
<!--    <string name="admobe_app_id">ca-app-pub-9095339188186410~3407571314</string>-->
<!--    <string name="banner_1">ca-app-pub-9095339188186410/3776889368</string>-->
<!--    <string name="banner_2">ca-app-pub-9095339188186410/2283844299</string>-->
<!--    <string name="interstitial_1">ca-app-pub-9095339188186410/1150726026</string>-->
<!--    <string name="native_1">ca-app-pub-9095339188186410/7524562684</string>-->
<!--    <string name="native_2">ca-app-pub-9095339188186410/8657680956</string>-->
<!--    <string name="rewarded_1">ca-app-pub-9095339188186410/1150386713</string>-->
<!--    <string name="rewarded_2">ca-app-pub-9095339188186410/3585317675</string>-->





</resources>