<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SearchActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_back" />

    <EditText
        android:id="@+id/search"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@+id/back"
        android:background="@drawable/search_box"
        android:drawableEnd="@drawable/ic_search"
        android:hint="@string/search_vehicles"
        android:imeOptions="actionSearch"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchResults"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/search"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp" />

    <LinearLayout
        android:id="@+id/emptyIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:background="@drawable/border_8"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/baloo_normal"
            android:text="@string/no_result_found"
            android:textColor="@color/theme_primary"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>