<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.LanguageActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/baloo_normal"
            android:text="@string/languages"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            android:layout_weight="1"
            app:cardElevation="8dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textColor="@color/theme_primary"
                    android:fontFamily="@font/baloo_normal"
                    android:textSize="28sp"
                    android:lineSpacingExtra="-16dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="English"
                    android:textColor="@color/theme_primary"
                    android:fontFamily="@font/baloo_normal"
                    android:textSize="16sp"
                    android:layout_marginTop="-8dp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            android:layout_weight="1"
            app:cardElevation="8dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eng_hindi"
                    android:textColor="@color/theme_primary"
                    android:fontFamily="@font/baloo_normal"
                    android:textSize="28sp"
                    android:lineSpacingExtra="-16dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hindi"
                    android:textColor="@color/theme_primary"
                    android:fontFamily="@font/baloo_normal"
                    android:textSize="16sp"
                    android:layout_marginTop="-8dp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            android:layout_weight="1"
            app:cardElevation="8dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eng_bengali"
                    android:textColor="@color/theme_primary"
                    android:fontFamily="@font/baloo_normal"
                    android:textSize="28sp"
                    android:lineSpacingExtra="-16dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bengali"
                    android:textColor="@color/theme_primary"
                    android:fontFamily="@font/baloo_normal"
                    android:textSize="16sp"
                    android:layout_marginTop="-8dp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="12dp"
            android:layout_weight="1"
            app:cardElevation="8dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eng_tamil"
                    android:textColor="@color/theme_primary"
                    android:fontFamily="@font/baloo_normal"
                    android:textSize="28sp"
                    android:lineSpacingExtra="-16dp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tamil"
                    android:textColor="@color/theme_primary"
                    android:fontFamily="@font/baloo_normal"
                    android:textSize="16sp"
                    android:layout_marginTop="-8dp"
                    android:textStyle="bold"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</LinearLayout>