<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.main.SellFragment">


    <LinearLayout
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/theme_primary"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/car_sell"
            android:padding="4dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sell"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="28sp"
            android:fontFamily="@font/baloo_normal"/>


    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:id="@+id/introCard"
        android:layout_below="@id/header_title"
        app:cardElevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sell your vehicle with us"
                android:layout_margin="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/theme_primary"
                android:fontFamily="@font/baloo_normal"/>

            <TextView
                android:id="@+id/totalPosts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="My Post's    : 0"
                android:textSize="24sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/baloo_normal"/>
            <TextView
                android:id="@+id/postsLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Post's Left  : 0"
                android:textSize="24sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/baloo_normal"/>


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="4dp"
        android:id="@+id/topupCard"
        android:layout_below="@+id/introCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/buy_more_post_s"
                android:layout_margin="8dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/theme_primary"
                android:textSize="24sp"
                android:fontFamily="@font/baloo_normal"/>

            <Button
                android:id="@+id/button_topup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:textSize="20sp"
                android:gravity="center"
                android:fontFamily="@font/baloo_bold"
                android:backgroundTint="@color/orange"
                android:text="@string/topup"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="4dp"
        android:id="@+id/newPostCard"
        android:layout_below="@+id/topupCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/add_a_new_post"
                android:layout_margin="8dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/theme_primary"
                android:textSize="24sp"
                android:fontFamily="@font/baloo_normal"/>

            <Button
                android:id="@+id/button_add_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:textSize="20sp"
                android:gravity="center"
                android:fontFamily="@font/baloo_bold"
                android:backgroundTint="@color/green"
                android:text="Add Post"
                tools:ignore="HardcodedText" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>